<resources>
    <string name="app_launcher_name">2023 Scout</string>
    <string name="app_long_name" formatted="false">TEAM2137 2023 Scouting</string>
    <string name="app_debug_name" formatted="false">Secret Debug Area</string>

    <string name="label_competition">Competition</string>
    <string name="label_team">Team</string>
    <string name="label_team_other">Team #</string>
    <string name="label_match">Match</string>
    <string name="label_alliance">Alliance</string>
    <string name="label_scout_name">Scout Name</string>

    <string name="heading_auto">AUTO</string>
    <string name="heading_teleop">TELEOP</string>
    <string name="heading_comments">COMMENTS</string>
    <string name="heading_post_match">POST-MATCH</string>

    <string name="button_switch_teleop">GO TO TELEOP</string>
    <string name="button_switch_auto">GO TO AUTO</string>
    <string name="button_switch_comments">GO TO COMMENTS</string>
    <string name="button_switch_post_match">GO TO POST-MATCH</string>

    <string name="button_save_and_reset_data">Save Match Data and Reset</string>
    <string name="button_reset_data">Reset Match Data</string>
    <string name="button_delete_data">Delete ALL Data</string>
    <string name="button_upload_data">Upload Match Data</string>
    <string name="button_upload_data_format" formatted="false">Upload %d Matches</string>
    <string name="button_upload_data_all_format" formatted="false">Upload %d (All) Matches</string>
    <string name="button_save_csv_format" formatted="false">Save %d Matches to CSV</string>
    <string name="dialog_save_csv_format_title">Save Matches to CSV?</string>
    <string name="dialog_save_csv_format_message">WARNING: This can result in duplicate data!</string>
    <string name="button_switch_team">Switch Team</string>
    <string name="textView_tablet_name">Tablet Name</string>
    <string name="button_switch_rocket">Switch Rocket</string>

    <string name="header_id">ID</string>
    <string name="header_comp">COMP</string>
    <string name="header_match">M</string>
    <string name="header_team">T</string>
    <string name="header_uploaded">UPL?</string>

    <string name="auto_taxi">Taxi</string>
    <string name="button_high_goal">High\nGoal\n%d</string>
    <string name="button_low_goal">Low\nGoal\n%d</string>
    <string name="button_miss">Miss\n%d</string>

    <string name="text_teleop_climb">Climbing</string>
    <string name="text_teleop_start_climb">Start\nClimbing</string>
    <string name="text_teleop_climb_l1">Low Bar</string>
    <string name="text_teleop_climb_l2">Mid Bar</string>
    <string name="text_teleop_climb_l3">High Bar</string>
    <string name="text_teleop_climb_l4">Traversal Bar</string>

    <string name="button_fouls">Fouls\n%d</string>

    <string name="button_defense">Played Defense?</string>
    <string name="button_downtime">Was Down?</string>
    <string name="button_defended">Defended?</string>
    <string name="button_25">25%</string>
    <string name="button_50">50%</string>
    <string name="button_75">75%</string>
    <string name="button_100">100%</string>

    <string name="textView_driver_skill">Driver Skill</string>
    <string name="textView_defensive_skills">Defensive Skill</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>

    <string name="button_yellow_card">Yellow Card</string>

    <string name="dialog_delete_title">Delete Stored Data</string>
    <string name="dialog_delete_message">Delete Data?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>


    <string name="number_twilio">+12482361204</string>
    <!--<string name="number_twilio">+12485341308</string> // Twilio OLD-->
    <!--<string name="number_twilio">+12483102092</string> // Andrew-->
    <string name="pref_key_theme">theme</string>
    <string name="pref_tablet_name">tabletName</string>
    <string name="pref_rocket_switch">rocketSwitch</string>
    <string name="timer_default">0:00</string>
    <string name="header_description">FRC Logo</string>



</resources>
