<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/list_uniqueID"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:textSize="24sp"
        android:text="@string/header_id"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/list_matchCompetition"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="24sp"
        android:text="@string/header_comp"
        android:layout_weight="2"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/list_matchNumber"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="24sp"
        android:text="@string/header_match"
        android:layout_weight="0.5"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/list_matchTeam"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="24sp"
        android:text="@string/header_team"
        android:layout_weight="1"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/list_uploaded"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="24sp"
        android:text="@string/header_uploaded"
        android:layout_weight="1"
        android:textStyle="bold"/>

</LinearLayout>