<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewPostMatch"
        style="@style/AppTheme.Text.Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/heading_post_match" />

    <TextView
        android:id="@+id/textViewDefenseSkill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPostMatch"
        android:layout_centerHorizontal="true"
        android:text="@string/textView_defensive_skills"
        android:textAppearance="@style/AppTheme.Text.Heading" />

    <LinearLayout
        android:id="@+id/layoutDefenseSkill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDefenseSkill"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonPostDefenseSkill0"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_0" />

        <Button
            android:id="@+id/buttonPostDefenseSkill1"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_1" />

        <Button
            android:id="@+id/buttonPostDefenseSkill2"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_2" />
    </LinearLayout>

    <Space
        android:id="@+id/spacePostMatch1A"
        android:layout_width="2dp"
        android:layout_height="9dp"
        android:layout_below="@+id/layoutDefenseSkill"
        android:layout_weight="1" />

    <View
        android:id="@+id/dividerPostMatch1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/spacePostMatch1A"
        android:background="#FFFFFF" />

    <Space
        android:id="@+id/spacePostMatch1B"
        android:layout_width="2dp"
        android:layout_height="9dp"
        android:layout_below="@+id/dividerPostMatch1"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/layoutDefensePlayed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spacePostMatch1B"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonPostDefense25"
                style="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_25" />

            <Button
                android:id="@+id/buttonPostDefense50"
                style="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_50" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonPostDefense75"
                style="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_75" />

            <Button
                android:id="@+id/buttonPostDefense100"
                style="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_100" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>