<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.team2137.rapidreactscouting.TeleopFragment">

    <Button
        android:id="@+id/buttonTeleopHigh"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_high_goal" />

    <Button
        android:id="@+id/buttonTeleopLow"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonTeleopHigh"
        android:text="@string/button_low_goal" />

    <Space
        android:id="@+id/spaceTeleop1A"
        android:layout_width="2dp"
        android:layout_height="9dp"
        android:layout_below="@+id/buttonTeleopLow"
        android:layout_weight="1" />

    <View
        android:id="@+id/dividerTeleop1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/spaceTeleop1A"
        android:background="#FFFFFF" />

    <Space
        android:id="@+id/spaceTeleop1B"
        android:layout_width="2dp"
        android:layout_height="9dp"
        android:layout_below="@+id/dividerTeleop1"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonTeleopMiss"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spaceTeleop1B"
        android:text="@string/button_miss" />

    <Space
        android:id="@+id/spaceTeleop3A"
        android:layout_width="2dp"
        android:layout_height="9dp"
        android:layout_below="@+id/buttonTeleopMiss"
        android:layout_weight="1" />

    <View
        android:id="@+id/dividerTeleop3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/spaceTeleop3A"
        android:background="#FFFFFF" />

    <Space
        android:id="@+id/spaceTeleop3B"
        android:layout_width="2dp"
        android:layout_height="9dp"
        android:layout_below="@+id/dividerTeleop3"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonTeleopFouls"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_fouls"
        android:layout_below="@id/spaceTeleop3B"/>

    <Space
        android:id="@+id/spaceTeleop2A"
        android:layout_width="2dp"
        android:layout_height="9dp"
        android:layout_below="@+id/buttonTeleopFouls"
        android:layout_weight="1" />

    <View
        android:id="@+id/dividerTeleop2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/spaceTeleop2A"
        android:background="#FFFFFF" />

    <Space
        android:id="@+id/spaceTeleop2B"
        android:layout_width="2dp"
        android:layout_height="9dp"
        android:layout_below="@+id/dividerTeleop2"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/spaceTeleop2B">

        <TextView
            android:id="@+id/textTeleopClimb"
            style="@style/AppTheme.Text.Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_teleop_climb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.team2137.rapidreactscouting.ClimbingChronometer
                android:id="@+id/climbingChronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonTeleopStartClimb"
                style="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_teleop_start_climb" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonTeleopL1"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_teleop_climb_l1" />

        <Button
            android:id="@+id/buttonTeleopL2"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_teleop_climb_l2" />

        <Button
            android:id="@+id/buttonTeleopL3"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_teleop_climb_l3" />

        <Button
            android:id="@+id/buttonTeleopL4"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_teleop_climb_l4" />
    </LinearLayout>

</RelativeLayout>
