<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingTop="0dp"
    android:paddingRight="8dp"
    android:paddingBottom="0dp">

    <TextView
        android:id="@+id/textViewScoutNum"
        style="@style/AppTheme.Text.Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewMode"
        android:layout_alignParentLeft="true"
        android:text="ScoutNum"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewMode"
        style="@style/AppTheme.Text.Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/heading_auto"
        android:textAlignment="center" />

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutFooter"
        android:layout_below="@+id/textViewMode"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/frcHeader"
                android:layout_width="256dp"
                android:layout_height="128dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/header_description"
                app:srcCompat="@mipmap/rapidreact_logo" />

            <LinearLayout
                android:id="@+id/layoutTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutCompetition"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.Text"
                    android:text="@string/label_team" />

                <Spinner
                    android:id="@+id/spinnerTeam"
                    style="@style/AppTheme.Input.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutCompetition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frcHeader"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    style="@style/AppTheme.Text"
                    android:gravity="center_vertical"
                    android:text="@string/label_competition" />

                <Spinner
                    android:id="@+id/spinnerCompetition"
                    style="@style/AppTheme.Input.Spinner"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTeamNumberOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutTeam"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.Text"
                    android:gravity="center"
                    android:text="@string/label_team_other" />

                <EditText
                    android:id="@+id/editTextTeamNumberOther"
                    style="@style/AppTheme.Input.EditText"
                    android:layout_weight="1"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutMatchNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutTeamNumberOther"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.Text"
                    android:gravity="center"
                    android:text="@string/label_match" />

                <EditText
                    android:id="@+id/editTextMatchNumber"
                    style="@style/AppTheme.Input.EditText"
                    android:layout_weight="1"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutScoutName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/layoutMatchNumber"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.Text"
                    android:gravity="center"
                    android:text="@string/label_scout_name" />

                <EditText
                    android:id="@+id/editTextScoutName"
                    style="@style/AppTheme.Input.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textShortMessage|textPersonName|textCapWords" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/layoutFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutScoutName"
                android:layout_marginBottom="12dp"
                android:background="?android:attr/detailsElementBackground"
                tools:layout="@layout/fragment_auto" />

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/layoutFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSwitchModeUpper"
            style="@style/AppTheme.Button.Long.Blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/button_switch_teleop" />

        <Button
            android:id="@+id/buttonSwitchModeLower"
            style="@style/AppTheme.Button.Long.Blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSwitchModeUpper"
            android:text="@string/button_switch_post_match" />

        <Button
            android:id="@+id/buttonSaveData"
            style="@style/AppTheme.Button.Long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonSwitchModeLower"
            android:text="@string/button_save_and_reset_data" />

        <Button
            android:id="@+id/buttonResetData"
            style="@style/AppTheme.Button.Long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSaveData"
            android:layout_alignParentLeft="true"
            android:text="@string/button_reset_data" />

        <Button
            android:id="@+id/buttonUploadData"
            style="@style/AppTheme.Button.Long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonResetData" />

    </RelativeLayout>

</RelativeLayout>
