<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="0dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="0dp"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/listViewDatabase"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonUploadUnuploaded"
        style="@style/AppTheme.Button.Long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonUploadAll"
        style="@style/AppTheme.Button.Long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonSwitchTeam"
        style="@style/AppTheme.Button.Long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_switch_team"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            style="@style/AppTheme.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_tablet_name" />

        <EditText
            android:id="@+id/editTextTabletName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSaveCSV"
        style="@style/AppTheme.Button.Long" />

    <Button
        android:id="@+id/buttonDeleteData"
        style="@style/AppTheme.Button.Long.Red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_data"/>

</LinearLayout>
